# ttf_rust

./: Cargo.toml  Criterion_try_out.md  READ_ME.md
benches/: my_benchmark.rs
examples/: test_redirect.rs
src/: lib.rs  main.rs
