[package]
name = "ttf_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
criterion = "0.5.1"



# desc from here
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html
[[bin]]
#name = "01_main"
#test = false
#bench = false

#from here
#https://bheisler.github.io/criterion.rs/book/getting_started.html
[[bench]]
name = "my_benchmark"
harness = false

